[gd_scene load_steps=2 format=3 uid="uid://dgdoob8bqrdx7"]

[ext_resource type="Script" uid="uid://338dua3an46j" path="res://src/windows/dbase_editor/dbase_100_header.gd" id="1_ujeed"]

[node name="DBase100Header" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -891.0
offset_bottom = -458.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ujeed")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Signature:"

[node name="SignatureEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Filesize:"

[node name="FilesizeEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Unk 0x0C: "

[node name="Unk0x0CEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Inventory Count: "

[node name="InventoryCountEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Inventory Offset: "

[node name="InventoryOffsetEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Actions Count: "

[node name="ActionsCountEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Actions Offset: "

[node name="ActionsOffsetEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer8" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer8"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Cutscenes Count: "

[node name="CutscenesCountEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer9" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer9"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Cutscenes Offset: "

[node name="CutscenesOffsetEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer9"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer10" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer10"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Interfaces Count: "

[node name="InterfacesCountEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer10"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer11" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer11"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Interfaces Offset: "

[node name="InterfacesOffsetEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer11"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer12" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer12"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Unk 0x30: "

[node name="Unk0x30Edit" type="LineEdit" parent="VBoxContainer/HBoxContainer12"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoPanel" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[connection signal="text_changed" from="VBoxContainer/HBoxContainer3/Unk0x0CEdit" to="." method="_on_unk_0x_0c_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer12/Unk0x30Edit" to="." method="_on_unk_0x_30_edit_text_changed"]
